--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
- 
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
- 
+
 button {
   /* button 요소에 기본적으로 설정되는 스타일 속성 초기화 */
   border: none;
@@ -15,7 +15,7 @@ button {
   padding: 0;
   cursor: pointer;
 }
- 
+
 body {
   display: flex;
   align-items: center;
@@ -29,11 +29,11 @@ body {
   background: #fff;
   border-radius: 10px;
   padding: 25px;
-  position:relative;
-  left:100px;
-  top:70px;
+  position: relative;
+  left: 100px;
+  top: 70px;
 }
- 
+
 .wrapper .nav {
   display: flex;
   align-items: center;
@@ -62,7 +62,7 @@ body {
 }
 .calendar .days {
   margin-bottom: 0px;
-  z-index:2;
+  z-index: 2;
 }
 .calendar ul li {
   width: calc(100% / 7);
@@ -106,21 +106,21 @@ body {
   background: #000000;
 }
 
-.days li.smallL{
+.days li.smallL {
   height: 22px;
   width: 135.6px;
-  margin-top:2px;
-  margin-bottom:0px;
-  display:-webkit-box;
-  border-radius:8px;
+  margin-top: 2px;
+  margin-bottom: 0px;
+  display: -webkit-box;
+  border-radius: 8px;
   -webkit-line-clamp: 1;
-  -webkit-box-orient:vertical;
-  overflow:hidden;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
   z-index: -1;
-  color:#000000;
+  color: #000000;
 }
 
-.days li.smallL::before{
+.days li.smallL::before {
   position: absolute;
   display: none;
   content: '';
@@ -156,12 +156,12 @@ body {
   height: 600px;
   position: absolute;
   padding: 10px;
-  overflow:auto;
+  overflow: auto;
 }
 
-.list_title{
-  margin-top:10px;
-  margin-bottom:10px;
+.list_title {
+  margin-top: 10px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -169,53 +169,53 @@ body {
   font-size: 30px;
 }
 
-.list_title_side{
+.list_title_side {
   flex: 0 0 40px;
   text-align: center;
 }
 
-.event_button{
+.event_button {
   width: 200px;
   height: 100px;
   font-size: 70px;
-  margin-bottom:100px;
-  border-radius:10px;
-  display:block;
-  color: #FFFFFF;
+  margin-bottom: 100px;
+  border-radius: 10px;
+  display: block;
+  color: #ffffff;
   background: #dac790;
   position: relative;
-  top:120px;
-  left:-370px;
+  top: 120px;
+  left: -370px;
 }
 
-.listL2{
+.listL2 {
   width: 680px;
   height: 100px;
-  margin-bottom:15px;
-  text-align:center; 
+  margin-bottom: 15px;
+  text-align: center;
   line-height: 2.5;
   font-size: 20px;
-  background-color: #FAF0E4;
-  border-radius:8px;
-  overflow:auto;
+  background-color: #faf0e4;
+  border-radius: 8px;
+  overflow: auto;
 }
 
-.buttonWindow{
+.buttonWindow {
   width: 80px;
-  height:100px;
-  position:absolute;
-  top:76px;
-  left:598px;
+  height: 100px;
+  position: absolute;
+  top: 76px;
+  left: 598px;
 }
 
-.linkButton{
+.linkButton {
   width: 70px;
-  height:100px;
-  margin-bottom:15px;
-  position:relative;
-  left:100px;
-  background-color: #EECFBB;
-  border-radius:8px;
+  height: 100px;
+  margin-bottom: 15px;
+  position: relative;
+  left: 100px;
+  background-color: #eecfbb;
+  border-radius: 8px;
 }
 
 .bar {
@@ -263,24 +263,24 @@ input:focus {
   height: 100px;
   width: 300px;
   overflow: auto;
-  z-index:3;
+  z-index: 3;
 }
 
-#header{
+#header {
   font-weight: bold;
   background-color: #ebdccc;
-  height:150px;
-  width:100%;
+  height: 150px;
+  width: 100%;
   font-size: 30px;
   color: white;
-  position:absolute;
-  top:0px;
+  position: absolute;
+  top: 0px;
 }
 
-.calendarLogo{
+.calendarLogo {
   height: 140px;
-  position:absolute;
-  left:45%;
+  position: absolute;
+  left: 45%;
 }
 
 .side_bar {
